# HalfSlidingSketch

./: CMakeLists.txt  README.md
demo/: demo.sh
src/Frequency/: definition.h
src/Frequency/ECM/: data.h  hash_class.h  sketch.h
src/Frequency/ECM/demo/: main.cpp
src/Frequency/HalfSlidingSketch/: clock.h  data.h  hash_class.h
src/Frequency/HalfSlidingSketch/demo/: main.cpp
src/Frequency/SWCM/: hash_class.h  splitter.h
src/Frequency/SWCM/demo/: main.cpp
src/Frequency/SlidingSketch/: clock.h  data.h  hash_class.h
src/Frequency/SlidingSketch/demo/: main.cpp
src/Frequency/Sliding_Sketch/: clock.h  hash_class.h
src/Frequency/Sliding_Sketch/demo/: main.cpp
src/HeavyHitter/: definition.h
src/HeavyHitter/HSS_HK/: heavykeeper.h  main.cpp
src/HeavyHitter/SS_HK/: heavykeeper.h
src/HeavyHitter/SS_HK/demo/: main.cpp
src/HeavyHitter/WCSS/: cuckoo.h  cuckoo_css.h  data.h  hash_class.h  wcss.h
src/HeavyHitter/WCSS/demo/: prec.cpp  recall.cpp
src/HeavyHitter/lambda_Algorithm/: data.h  hash_class.h  summary.h
src/HeavyHitter/lambda_Algorithm/demo/: main.cpp
src/Membership/: definition.h
src/Membership/FBF/: bitset.h  bloom.h  forget_bloom.h
src/Membership/FBF/demo/: main.cpp
src/Membership/HSS-BF/: hash.h  sliding_bloom.h
src/Membership/HSS-BF-AQS/: sliding_bloom.h
src/Membership/HSS-BF/demo/: main.cpp
src/Membership/SS-BF/: bitset.h  sliding_bloom.h
src/Membership/SS-BF/demo/: main.cpp
src/Membership/SW-BF/: BOBHash.h  BloomFilter.h  SW-BF.h
src/Membership/SW-BF/demo/: main.cpp
